== 7/21/2011

Initial release.

== 7/23/2011

Addition of cascading module functions.

== 7/31/2011

Total overhaul of internals.
Major interface changes.
Addition of prepend functions.
Added deprecated method exceptions for interface changes.

== 8/1/2011

Added cascades_to_module methods.

== 8/3/2011

2700% speed-up by preventing cascading duplicate includes/extends.

== 8/6/2011

Actually fixed speed problems rather than just improving them.
Add block support for declarations.
Added block methods for nested declarations.
